Changed port to 9001 and v-host and PHP config

--- a/config/v-host.conf
+++ b/config/v-host.conf
@@ -1,4 +1,4 @@
-<VirtualHost *:80>
+<VirtualHost *:9001>
 ServerName pieknywschod.pl
 ServerAlias www.pieknywschod.pl
 DocumentRoot "/var/www/html/portal/public_html"
@@ -13,3 +13,36 @@ Require all granted
 ErrorLog /var/www/html/portal/pieknywschod.log
 LogLevel error
 </VirtualHost>
+
+<VirtualHost *:9001>
+ServerName aktualnosciturystyczne.pl
+ServerAlias www.aktualnosciturystyczne.pl
+DocumentRoot "/var/www/html/portal/public_html"
+ServerAdmin grzegorz.kowalski@pot.gov.pl
+
+<Directory "/var/www/html/portal/public_html">
+DirectoryIndex index.php
+AllowOverride All
+Require all granted
+</Directory>
+
+ErrorLog /var/www/html/portal/aktualnosci.log
+LogLevel error
+</VirtualHost>
+
+<VirtualHost *:9001>
+ServerName edenpolska.pl
+ServerAlias www.edenpolska.pl
+DocumentRoot "/var/www/html/portal/public_html"
+ServerAdmin grzegorz.kowalski@pot.gov.pl
+
+<Directory "/var/www/html/portal/public_html">
+DirectoryIndex index.php
+AllowOverride All
+Require all granted
+</Directory>
+
+ErrorLog /var/www/html/portal/eden.log
+LogLevel error
+</VirtualHost>
+
